--- a/package.json
+++ b/package.json
@@ -11,8 +11,21 @@
     "ts:check": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@types/linkify-it": "^3.0.2",
+    "@types/lodash": "^4.14.166",
+    "@types/node": "^14.14.36",
+    "@types/react": "^17.0.0",
+    "@types/styled-components": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
     "axios": "^0.21.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "deepmerge": "^4.2.2",
+    "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "linkify-it": "^3.0.3",
     "next": "^12.1.0",
     "nprogress": "^0.2.0",
@@ -26,20 +39,7 @@
     "redux": "^4.0.5",
     "socket.io-client": "^3.1.1",
     "styled-components": "^5.3.0",
-    "uuid": "^8.3.2",
-    "@types/linkify-it": "^3.0.2",
-    "@types/lodash": "^4.14.166",
-    "@types/node": "^14.14.36",
-    "@types/react": "^17.0.0",
-    "@types/styled-components": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
-    "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.31.0",
-    "eslint-config-next": "^11.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "uuid": "^8.3.2"
   }
 }
