--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 8080",
+    "start": "next start -p $PORT",
     "tsc": "tsc",
     "lint": "next lint",
     "ts:check": "tsc -p tsconfig.json --noEmit"
