--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -27,7 +28,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "linkify-it": "^3.0.3",
-    "next": "^12.1.0",
+    "next": "^12.3.4",
     "nprogress": "^0.2.0",
     "polished": "^4.0.5",
     "react": "^17.0.2",
@@ -36,6 +37,7 @@
     "react-query": "^3.9.8",
     "react-redux": "^7.2.2",
     "react-share": "^4.4.0",
+    "react-switch": "^7.0.0",
     "redux": "^4.0.5",
     "socket.io-client": "^3.1.1",
     "styled-components": "^5.3.0",
